<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weekly Prayers</string>
    <string name="about_fragment">Help and About</string>
    <string name="write">Write</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="no_notes">Empty Notes!</string>
    <string name="save">Save</string>
    <string name="encriptar">Encrypt</string>
    <string name="desencriptar">Decrypt</string>
    <string name="errEnc">Encryption error!</string>
    <string name="errDesc">Decrypting error! Wrong password!</string>
    <string name="notaSalva">Note saved</string>
    <string name="ok">OK</string>
    <string name="empty_note">Empty note not saved!</string>
    <string name="password">Password</string>
    <string name="prayer_requests">Prayer Days</string>
    <string name="diary">Journal</string>
    <string name="createOn">"Created on: "</string>
    <string name="by">"By: "</string>
    <string name="deleteSuccess">" Note(s) deleted successfully!"</string>
    <string name="deleteSuccess1">Note deleted successfully!</string>
    <string name="no_selected_notes">No selected stage!</string>
    <string name="erroChave">Error creating key!</string>
    <string name="sucEnc">The text was successfully encrypted!</string>
    <string name="sucDesc">The text was successfully decrypted!</string>
    <string name="msgDesc">"Enter the password to decrypt: "</string>
    <string name="msgEnc">"Enter the password that will be associated with the encryption: "</string>
    <string name="about_version">Version: 1.0 – 2021.03.06</string>
    <string name="welcome">Welcome!</string>
    <string name="authenticate">Authenticate</string>
    <string name="authenticate_title_desc">Authenticate to enter the app</string>
    <string name="cancel">Cancel</string>
    <string name="auth_desc">To keep your personal data confidential, we need to verify your identity before granting access to the app</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="personal_details">Personal Details</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="system_default">System default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="your_name">Your name</string>
    <string name="interface_settings">Interface</string>
    <string name="your_mail">Your email</string>
    <string name="by_dpsoft">By DPSoft</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="google_login">Google Backup and Restore</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="prayer_reminders">Daily prayer reminder</string>
    <string name="enable_notifications">Check if you want to receive daily reminders to pray</string>
    <string name="other_settings">Notification settings</string>
    <string name="view_profile_picture">View picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_profile_image_desc">Are you sure you want to delete this profile image?</string>
    <string name="delete_profile_image">Delete profile image</string>
    <string name="load_image_google">Import profile picture from Google account</string>
    <string name="load_image_google_desc">This will delete your actual profile picture!</string>
    <string name="title">Title</string>
    <string name="edit_note">Edit note</string>
    <string name="x_encrypted">x ENCRYPTED</string>
    <string name="praying">Prayed</string>
    <string name="subject">Subject</string>
    <string name="dp_soft_copyright" translatable="false">© DPSoft 2021</string>
    <string name="prayer_channel_name">Prayer Reminders</string>
    <string name="prayer_channel_description">Notification to remind you to pray for the current day request</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_time_desc">Time you want to receive the reminder</string>
    <string name="timePattern">h:mm a</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="notification_off">Notification turned off for this day</string>
    <string name="notification_on">Notification turned on for this day</string>
    <string name="dateTimePatternSimple">M/d/yyyy \'at\' h:mm a</string>
    <string name="next_reminder">"Next reminder %1$s at "</string>
    <string name="reminder_set">"Reminder set to: "</string>
    <string name="diary_channel_name">Diary Reminders</string>
    <string name="diary_channel_description">Reminders that you can set to your notes in Diary tab</string>
    <string name="last_modified">"Last modified: "</string>
    <string name="restore">Restore</string>
    <string name="backup" translatable="false">Backup</string>
    <string name="backup_message">Do you want to make a backup?</string>
    <string name="backup_description">A backup file (dp.pfh.backup) with the whole data and settings will be generated and saved in your Google Drive account. If a backup file already exists, it will be replaced. You will need a internet connection to do it!</string>
    <string name="restore_message">Are you sure you want to restore?</string>
    <string name="restore_description">Confirm that there is an internet connection. The program will search for the most recent backup file in your Google Drive account. Your actual data and settings will be deleted forever!</string>
    <string name="backup_error">An error has occurred while doing the backup. Check your internet connection and try again. If the problem persists, try to \"Disconnect\" your Google account and then login and authorize Google Drive access again.</string>
    <string name="fingerprint_click">Click on the image bellow</string>
    <string name="restore_error">An error has occurred. Check your internet connection and try again. If the problem persists, check if there is a backup file (dp.pfh.backup) in your Google Drive account, then try to \"Disconnect\" your Google account and then login and authorize Google Drive access again.</string>
    <string name="restore_completed">Restore completed</string>
    <string name="backup_completed">Backup Completed</string>
    <string name="backup_error_toast">Unable to backup. Retry</string>
    <string name="write_a_prayer_request">Write a prayer request</string>
    <string name="google_sign_in" translatable="false">Google Sign In</string>
    <string name="sign_in_to_backup_and_restore">Sign in to backup and restore</string>
    <string name="no_backup">No backup was ever made with the actual data. Make one to preserve it or restore a previous backup.</string>
    <string name="last_backup_on">"Last backup on "</string>
    <string name="authentication_not_available">Authentication not available</string>
    <string name="prayer_card">Prayer Card</string>
    <string name="color">Color</string>
    <string name="choose_color">Choose a color</string>
    <string name="search">Search</string>
</resources>