<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_700"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".backup.GoogleSignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/g_top_margin"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_google" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/google_sign_in"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:maxLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="1000dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_user" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/blue_grey_900">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/padding_8"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:drawableLeft="@drawable/ic_sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/disconnect_button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/padding_8"
                android:layout_weight="1"
                android:text="@string/disconnect"
                android:drawableLeft="@drawable/ic_disconnect"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/backup_and_restore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sign_out_and_disconnect"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/backup_button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/padding_8"
                android:layout_weight="1"
                android:text="@string/backup"
                android:drawableLeft="@drawable/ic_backup_24px"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/restore_button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_margin="@dimen/fab_margin"
                android:padding="@dimen/padding_8"
                android:layout_weight="1"
                android:text="@string/restore"
                android:drawableLeft="@drawable/ic_settings_backup_restore_24px"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>