<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditNoteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:hint="@string/subject"
            android:background="@drawable/note_background"
            android:inputType="textMultiLine|textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_toolbar"
            android:maxLines="3"
            android:padding="@dimen/padding_10"
            android:textStyle="bold"
            android:textSize="21sp"
            android:fontFamily="@font/proximanovaregular"
            android:layout_marginVertical="@dimen/small_margin_top" />

        <dp.wkp.utils.ListEditText
            android:id="@+id/input_note"
            android:hint="@string/write_a_prayer_request"
            android:background="@drawable/note_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/end_toolbar"
            android:layout_below="@id/title"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:fontFamily="@font/proximanovaregular"
            android:textSize="21sp"
            android:layout_marginBottom="@dimen/small_margin_top" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/end_toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/edit_note_backg"
            android:theme="?attr/actionBarTheme" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:fontFamily="@font/proximanovaregular"
        android:textSize="20sp"
        android:text="@string/praying" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>