<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_profile_height"
        android:background="@color/goodgrey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/marginLeft_editTexts"
            android:paddingTop="@dimen/margin_top">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="1000dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/pfh" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="@dimen/padding_sections">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="@dimen/padding_sections">

                <TextView
                    android:id="@+id/versionInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/about_version"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="@dimen/padding_sections">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:justificationMode="inter_word"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="@dimen/padding_sections">

                <TextView
                    android:id="@+id/dp_copyright"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/dp_soft_copyright"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>